# riprap

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.app  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  agent.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-experiments.txt  requirements.txt  riprap.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  port_to_new_city.yml
.github/workflows/: check.yml
app/: emissions.py  framing.py  fsm.py  geocode.py  inference.py  llm.py  mellea_validator.py  planner.py  power_mac.py  print_pdf.py  rag.py  reconcile.py  register_builder.py  score.py  spatial.py
app/areas/: nta.py
app/assets/: mta_entrances.py  nycha.py  schools.py
app/context/: _polygonize.py  dob_permits.py  entity_extract.py  eo_chip_cache.py  fema_nfhl.py  floodnet.py  gliner_extract.py  microtopo.py  noaa_tides.py  npcc4_slr.py  nws_alerts.py  nws_obs.py  nyc311.py  seeclickfix.py  terramind_nyc.py  terramind_synthesis.py  usgs_gauges.py
app/flood_layers/: dep_stormwater.py  ida_hwm.py  prithvi_live.py  prithvi_water.py  sandy_inundation.py
app/intents/: __init__.py  development_check.py  live_now.py  neighborhood.py  single_address.py
app/live/: floodnet_forecast.py  ttm_battery_surge.py  ttm_forecast.py
app/registers/: _footprint.py  _loader.py  doe_schools.py  doh_hospitals.py  mta_entrances.py  nycha.py
data/: hand.tif  hospitals.geojson  ida_2021_hwms_ny.geojson  mta_entrances.geojson  nyc_dem_30m.tif  nyc_ntas_2020.geojson  nycha.geojson  prithvi_ida_2021.geojson  sandy_inundation.geojson  schools.geojson  twi.tif
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOY.md  EMISSIONS.md  INDEX.md  METHODOLOGY.md  PORT-YOUR-CITY.md  RESEARCH.md  VERIFICATION.md  briefing-standards.md  byod.md  demo.md  deployment-pi.md  multi-city.md  multi-hazard.md
experiments/: README.md
inference/: Dockerfile  entrypoint.sh  proxy.py
load/: README.md  RESULTS.md
modal/: demo_prewarm.py  riprap_frontend.py  warm.sh
scripts/: audit.py  bake_cornerstone_rasters.py  build_mta_entrances_register.py  build_nycha_register.py  build_schools_register.py  compute_hydrology_indices.py  dry_run.py  fetch_ida_hwms.py  fetch_nyc_dem.py  mac_powermetrics_start.sh  probe_5cities_smoke.py  probe_addresses.py  probe_cities_smoke.py  probe_mellea.py  probe_narrative_contracts.py  run_prithvi_flood.py  run_prithvi_ida.py  test_all.sh  ui_scaffold_diff.py
tests/: probe_50_results.json  queries_50.json  test_agent_batch.py  test_burr_stone_fanout.py  test_byod_load.py  test_citation_urls_not_dead.py  test_compare_shape.py  test_compliance_predicates.py  test_deployment_routing.py  test_emissions_hardware.py  test_geocode_bbox.py  test_geocode_target_scope_hint.py  test_intake_address.py  test_integration.py  test_intent_scope_wrap.py  test_live_now_scope_gate.py  test_mcp_server.py  test_mellea_citation_fix.py  test_nta_blending_note.py  test_pebble_bridge.py  test_pebble_byod_adapters.py  test_pebble_cornerstone.py  test_pebble_dep.py  test_pebble_ida_hwm.py  test_pebble_model_call.py  test_pebble_model_offline.py  test_pebble_sandy.py  test_policy_corpus_scope_gate.py  test_power_mac.py  test_print_pdf_fonts.py  test_spatial_lfs_check.py  test_stone_envelope.py  test_stones.py  test_strip_code_fences.py  test_templated_reconciler.py  test_terramind_nyc.py  test_wrap_mellea_paragraph.py
web/: main.py
(+527 files in other folders)
