[project]
name = "riprap"
version = "0.6.0"
description = "Composable, citation-grounded civic climate-exposure briefings for any US place."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" },
]
keywords = [
    "civic-tech",
    "open-data",
    "flood-risk",
    "climate-exposure",
    "citation-grounded",
    "rag",
    "grounded-llm",
    "fema",
    "noaa",
    "socrata",
    "ckan",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Sociology",
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://github.com/msradam/riprap"
Documentation = "https://github.com/msradam/riprap/blob/main/docs/INDEX.md"
Repository    = "https://github.com/msradam/riprap"
Issues        = "https://github.com/msradam/riprap/issues"
Changelog     = "https://github.com/msradam/riprap/blob/main/CHANGELOG.md"
"Legacy Demo (frozen, data probes only)" = "https://lablab-ai-amd-developer-hackathon-riprap-nyc.hf.space"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=9.0",
    "vulture>=2.13",
    "radon>=6.0",
    "pyupgrade>=3.20",
    "refurb>=2.1",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["riprap*", "app*"]
exclude = [
    "tests*", "scripts*", "experiments*", "load*", "examples*",
    "deployments*", "docs*", "web*", "outputs*", "data*", "corpus*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "data", "corpus", "outputs"]

[tool.ruff.lint]
# Pyflakes (real bug class) + import + bugbear; skip purely stylistic rules
# (E701/E702 multi-statement-per-line) where the compact form is intentional
# in our FSM error-recording one-liners.
select = ["F", "E4", "E7", "E9", "I", "B", "UP"]
ignore = [
    "E701",  # one-line `if cond: stmt` — intentional in compact guards
    "E702",  # `a; b` — intentional in compact `rec["ok"] = False; rec["err"] = ...` pairs
    "E741",  # ambiguous var name (e.g. `l`) — accept context where it's clear
    "B008",  # function call in default arg — fine for httpx Timeout etc.
]

[tool.ruff.lint.per-file-ignores]
# Scripts use one-shot patterns we don't want to over-lint.
"scripts/*.py" = ["F841", "B007"]

[tool.vulture]
min_confidence = 80
ignore_decorators = ["@app.get", "@app.post", "@action"]
# Names that LOOK unused but are required by external API contracts:
#   request   — FastAPI route handler signature
#   query_id  — FastAPI captured-param routes that forward to the SvelteKit
#               SPA fallback (the SPA reads it from window.location)
#   engine    — _hardware_for() param sliced by docstring contract, not by body
ignore_names = ["request", "query_id", "engine"]
paths = ["app", "web", "scripts", "riprap.py", "agent.py"]
